<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/editProfile"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_profile"
            style="@style/boldFontStyle"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:background="#a0a0a0"
        android:layout_width="match_parent"
        android:layout_height="2px" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginLeft="21dp"
                android:text="@string/id"
                style="@style/boldFontStyle"></TextView>

            <TextView
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/boarder"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="13dp"
                android:text="@string/id"
                android:paddingLeft="20dp"
                style="@style/editFontStyle"
                ></TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="21dp"
                android:text="@string/pw"
                style="@style/boldFontStyle"></TextView>

            <EditText
                android:id="@+id/editPw"
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="13dp"
                android:hint="15자 이하로 입력해주세요"
                android:paddingLeft="20dp"
                android:inputType=""
                style="@style/editFontStyle"
                ></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="21dp"
                android:text="@string/name"
                style="@style/boldFontStyle"></TextView>

            <TextView
                android:id="@+id/idEt"
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/boarder"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="13dp"
                android:text="@string/name"
                android:paddingLeft="20dp"
                style="@style/editFontStyle"
                ></TextView>

            <TextView
                style="@style/boldFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="20dp"
                android:text="@string/nickname"></TextView>

            <EditText
                android:id="@+id/nNameEt"
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="13dp"
                android:paddingLeft="20dp"
                android:inputType=""
                style="@style/editFontStyle"
                ></EditText>

            <Button
                android:id="@+id/nNameChkBtn"
                style="@style/sBtnFontStyle"
                android:layout_width="100dp"
                android:layout_height="38dp"
                android:layout_marginLeft="239dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/small_btn"
                android:text="@string/check"></Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:text="@string/telNum"
                style="@style/boldFontStyle"></TextView>

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="13dp"
                android:paddingLeft="20dp"
                android:inputType=""
                style="@style/editFontStyle"
                ></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="21dp"
                android:text="@string/email"
                style="@style/boldFontStyle"></TextView>

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="13dp"
                android:paddingLeft="20dp"
                android:inputType=""
                style="@style/editFontStyle"
                ></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="21dp"
                android:text="@string/gender"
                style="@style/boldFontStyle"></TextView>

            <RadioGroup
                android:id="@+id/genderRG"
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="46dp">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/wRb"
                    android:layout_width="161dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/l_gender_selector"
                    android:textColor="@drawable/gender_selector_text"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/woman"
                    style="@style/sBtnFontStyle"></RadioButton>

                <RadioButton
                    android:id="@+id/mRb"
                    android:layout_width="161dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/r_gender_selector"
                    android:textColor="@drawable/gender_selector_text"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/man"
                    style="@style/sBtnFontStyle"></RadioButton>

            </RadioGroup>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="322dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="@string/change"
                style="@style/btnFontStyle"></Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>