<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/editProfile"
        android:background="@color/white"
        app:contentInsetStart="0dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_profile_image"
            style="@style/boldFontStyle"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:background="#a0a0a0"
        android:layout_width="match_parent"
        android:layout_height="2px" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/circle_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:text="@string/nickname"
        style="@style/basicFontStyle"/>

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="0"
        />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:src="@drawable/circle_image" />
        <ImageView
            android:id="@+id/poster"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:src="@drawable/circle_image" />
        <ImageView
            android:id="@+id/poster"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:src="@drawable/circle_image" />

    </LinearLayout>

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="90dp"
        android:layout_height="0"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="322dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/change"
        style="@style/btnFontStyle"></Button>


</LinearLayout>