<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/editProfile"
        android:background="@color/white"

        app:contentInsetStart="0dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/others_profile"
            style="@style/boldFontStyle"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:background="#a0a0a0"
        android:layout_width="match_parent"
        android:layout_height="2px" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="21dp"
            android:scaleType="fitXY"
            android:src="@drawable/circle_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic[2]" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="18dp"
                android:text="@string/nickname"
                style="@style/boldFontStyle"/>

            <TextView
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="18dp"
                android:text="@string/address"
                style="@style/editFontStyle"/>
        </LinearLayout>
    </LinearLayout>
    
    <View
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#a0a0a0"
        android:layout_width="380"
        android:layout_height="2px" />

    <TextView
        android:id="@+id/movieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="21dp"
        android:text="활동"
        style="@style/boldFontStyle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="21dp"
            android:text="글 작성 내역"
            style="@style/basicFontStyle"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="10"
            android:src="@drawable/arrow"/>
         </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#a0a0a0"
            android:layout_gravity="center"
            android:layout_width="380dp"
            android:layout_height="2px" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="21dp"
            android:text="누적 신고 내역"
            style="@style/basicFontStyle"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:src="@drawable/arrow"/>
    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#a0a0a0"
        android:layout_gravity="center"
        android:layout_width="380dp"
        android:layout_height="2px" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="21dp"
            android:text="사용자 신고하기"
            style="@style/basicFontStyle"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:src="@drawable/arrow"/>
    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#a0a0a0"
        android:layout_gravity="center"
        android:layout_width="380dp"
        android:layout_height="2px" />


        </LinearLayout>

